_rendered/apps/argocd/networking_k8s_io-networkpolicy-argocd-argocd-notifications-controller.yaml
# Source: test/charts/argo-cd/templates/argocd-notifications/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.2.1
    app.kubernetes.io/name: argocd-notifications-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.4.5"
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
